--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 200px;
   height: 300px;
+  background-image: url("../img/hanabatake.jpeg");
 }
 
 
@@ -16,11 +17,7 @@
 #left-door {
   /* 左ドアの回転軸を左側に設定 */
   transform-origin: center left;
-  image: url("../img/left.png")
-}
-
-#right-door{
-  image: url("../img/right.png")
+  
 }
 
 #open-button {
